--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
 title: Example Title
+description: Using software to solve problems and investigate anything I find interesting :)
