--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Example Title
 description: Using software to solve problems and investigate anything I find interesting :)
+logo: rsolander/rsolander.github.io/image0.png
