--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Example Title
-description: Using software to solve problems and investigate anything I find interesting :)
-logo: rsolander.github.io/pix_rob.png
+description: Using software to solve problems and investigate anything I find interesting.
+logo: rsolander.github.io/forest_pic.jpeg
