--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Example Title
-description: Using software to solve problems and investigate anything I find interesting.
+title: Robert Olander
+description: Welcome to my project page! I'm sharing some of the more interesting things I'm building or problems I'm investigating.
 logo: rsolander.github.io/forest_pic.jpeg
