--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Robert Olander
-description: Welcome to my project page! I'm sharing some of the more interesting things I'm building or problems I'm investigating.
-logo: rsolander.github.io/forest_pic.jpeg
+description: Welcome to my project page! Kinda like a blog, but... nerdier.
+logo: rsolander.github.io/pix_rob2.png
