--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Robert Olander
-description: Welcome to my project page! Kinda like a blog, but... nerdier.
-logo: rsolander.github.io/pix_rob2.png
+title: Robby Olander
+description: Welcome to my project page! A blog for nerds. 
+logo: rsolander.github.io/forest_pic.jpeg
