--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Robby Olander
-description: Welcome to my project page! A blog for nerds. 
+description: Welcome to my project page, a work-in-process blog for some of the fun or interesting things I've worked on. Enjoy :) 
 logo: rsolander.github.io/forest_pic.jpeg
