--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Robby Olander
-description: Software engineering | Mechanical engineering | Design | Machine learning | Art | Music    Welcome to my project page, a WIP blog for some of the fun or interesting things I've worked on. Enjoy :) 
+description: Welcome to my project page, a WIP blog for some of the fun or interesting things I've worked on. Enjoy :) 
 logo: forest_pic.jpeg
